--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<script src="carlot.js"></script>
 	<script src="eventHandler.js"></script>
-	<script src="clearFields.js"></script>
+	<script src="styles.js"></script>
 	<script src="quiz.js"></script>
 </body>
 </html>
