--- a/index.html
+++ b/index.html
@@ -34,11 +34,8 @@
 	  </div><!-- /.container-fluid -->
 </nav>
 
-	<div class="container">
-		<div class="row" id="productCardRow">
-
-
-		</div>
+	<div class="container" id="productCardRow">
+		
 	</div>
 
 
